tests/NormalTests/paczka1/small_fuzzy/72912723.err
Error in line 3: z1Mf3IfAT S171 84,2
Error in line 1: tZP0 S171 51,8
Error in line 9: KeRU0 S171 14,2
Error in line 14: QWDLOguk1tj A98 95,6
